# hermes

./: .gitignore  debug_agreement.py  probe_accept.py  probe_agreement.py  probe_agreement2.py  probe_agreement3.py  probe_agreement4.py  probe_agreement5.py  probe_detail.py  probe_detail2.py  probe_detail3.py  probe_detail4.py  probe_detail_pages.py  probe_empty_metadata.py  probe_fullflow.py  probe_fullflow2.py  probe_gprefix.py  probe_states.py  pyproject.toml  test_serff_nav.py  test_serff_results.py
hermes/: __init__.py  bridge.py  celery_app.py  cli.py  config.py  db.py  tasks.py
hermes/api/: __init__.py  routes.py  schemas.py
hermes/extraction/: __init__.py  ai_extractor.py  table_extractor.py  text_extractor.py
hermes/matching/: __init__.py  appetite.py  eligibility.py  engine.py  premium.py  ranker.py  title_appetite.py  title_eligibility.py
hermes/mga/: __init__.py  agent.py  data_collector.py  models.py  renderer.py  routes.py  schemas.py  templates.py
hermes/monitoring/: __init__.py  alerts.py  change_detector.py  market_report.py
hermes/parsers/: __init__.py  base_parser.py  classifier.py  form_parser.py  rate_parser.py  rule_parser.py  title_parser.py
hermes/pmi/: __init__.py  engine.py  (+6 more)
migrations/: 001_carrier_registry.sql  002_filing_registry.sql  003_rate_intelligence.sql  004_underwriting_rules.sql  005_form_intelligence.sql  006_appetite_profiles.sql  007_metadata.sql  008_seed_carriers.sql  009_pmi_engine.sql  010_mga_proposals.sql  011_title_engine.sql
scripts/: generate_pmi_proposal.py  scrape_pmi_carriers.py  seed_pmi_rates.py
(+34 files in other folders)
