[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes"
version = "0.1.0"
description = "Hermes Regulatory Intelligence Engine — SERFF filing analysis and carrier matching"
requires-python = ">=3.11"
dependencies = [
    # Core
    "httpx[http2]>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Scraping
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",

    # PDF Parsing
    "pymupdf>=1.24.0",
    "camelot-py[cv]>=0.11.0",
    "tabula-py>=2.9.0",
    "pdfplumber>=0.11.0",

    # AI
    "anthropic>=0.28.0",

    # Task Queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # Utilities
    "tenacity>=8.3.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
hermes = "hermes.cli:app"

[tool.setuptools.packages.find]
include = ["hermes*"]
